--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
     
     "require": {
         "php": "^7.2",
+        "ext-bcmath": "*",
+        "ext-gd": "*",
         "bumbummen99/shoppingcart": "^2.8",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.5",
         "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^1.0",
-        "ext-bcmath": "*",
-        "ext-gd": "*"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
